--- a/document-types/welsh_language_scheme.html
+++ b/document-types/welsh_language_scheme.html
@@ -371,8 +371,8 @@
 <li><a href="https://www.gov.uk/government/organisations/cabinet-office/about/welsh-language-scheme">Cabinet Office – Welsh language scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/driver-and-vehicle-standards-agency/about/welsh-language-scheme">Driver and Vehicle Standards Agency – Welsh language scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/hm-courts-and-tribunals-service/about/welsh-language-scheme">HM Courts &amp; Tribunals Service – Welsh language scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/student-loans-company/about/welsh-language-scheme">Student Loans Company – Welsh language scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/disclosure-and-barring-service/about/welsh-language-scheme">Disclosure and Barring Service – Welsh language scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/youth-justice-board-for-england-and-wales/about/welsh-language-scheme">Youth Justice Board for England and Wales – Welsh language scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/department-for-communities-and-local-government/about/welsh-language-scheme">Department for Communities and Local Government – Welsh language scheme</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=welsh_language_scheme&amp;count=10">Source query from Search API</a></p>
 
