--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -446,16 +446,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
-      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
-      <li><a href="http://www.south-ayrshire.gov.uk" class="govuk-link">South Ayrshire Council</a></li>
+      <li><a href="http://www.watford.gov.uk/" class="govuk-link">Watford Borough Council</a></li>
       <li><a href="http://www.reading.gov.uk/" class="govuk-link">Reading Borough Council</a></li>
-      <li><a href="http://www.derby.gov.uk" class="govuk-link">Derby City Council</a></li>
-      <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
-      <li><a href="http://www.brent.gov.uk" class="govuk-link">London Borough of Brent Council</a></li>
+      <li><a href="http://www.south-ayrshire.gov.uk" class="govuk-link">South Ayrshire Council</a></li>
+      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
       <li><a href="https://www.organdonation.nhs.uk/" class="govuk-link">Organ donation</a></li>
-      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
+      <li><a href="http://www.arun.gov.uk/" class="govuk-link">Arun District Council</a></li>
+      <li><a href="https://productrecall.campaign.gov.uk" class="govuk-link">Product Recall - Acting on product safety</a></li>
+      <li><a href="https://www.gov.uk/alerts/how-alerts-work" class="govuk-link">How emergency alerts work</a></li>
+      <li><a href="http://www.herefordshire.gov.uk" class="govuk-link">Herefordshire Council</a></li>
+      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
