--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/professor-charles-hendry-the-prime-minister-s-trade-envoy-to-kazakhstan-visits-kazakhstan">Professor Charles Hendry, the Prime Minister’s Trade Envoy to Kazakhstan, visits Kazakhstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/290860.pt">#Rio450</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/222109.zh-tw">英國貿易文化辦事處休館公告</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/minister-for-the-middle-east-visits-israel--2">Minister for the Middle East Visits Israel</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--4">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/255470.es-419">Expertos del Reino Unido compartirán sus conocimientos en Rueda de Innovación y Negocios en Colombia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226243.pt">Consulado Britânico promove conferência sobre petróleo e gás</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286041.es-419">Se presentó la 5ta edición del Festival Shakespeare Buenos Aires en la Residencia del Embajador Británico en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/231029.es">Empresa y Derechos Humanos: Agenda Pública y Privada</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/vacancies-at-the-british-embassy-prague--2">Vacancies at the British Embassy Prague</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-uae-commit-to-a-closer-relationship-on-transport-cooperation--2">UK &amp; UAE commit to a closer relationship on transport cooperation</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-uk-support-for-700000-people-affected-by-2012-floods">New UK support for 700,000 people affected by 2012 floods</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-david-lidington-visits-poland--2">Minister for Europe David Lidington visits Poland</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
