--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -362,14 +362,14 @@ actually any pages with this document type.</p>
 <ul>
 <li><a href="https://www.gov.ukhttp//www.ballymena.gov.uk/">Ballymena Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
 <li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.crawley.gov.uk">Crawley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.workplacepensions.gov.uk/">Workplace Pensions</a></li>
 <li><a href="https://www.gov.ukhttp//www.lbhf.gov.uk/">London Borough of Hammersmith and Fulham Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.flintshire.gov.uk">Flintshire County Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.gov.uk/alerts/how-alerts-work">How emergency alerts work</a></li>
+<li><a href="https://www.gov.ukhttp//www.workplacepensions.gov.uk/">Workplace Pensions</a></li>
+<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.westsussex.gov.uk/">West Sussex County Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
